--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ html {
   height: 100vh;
   background: linear-gradient(rgba(255, 255, 255, 0.2),
       rgba(255, 255, 255, 0.3)),
-    url(images/bg.jpg) center no-repeat;
+    url('images/bg.jpg') center no-repeat;
   background-size: cover;
   flex-direction: column;
 }
