--- a/TheWineHouse/css/style.css
+++ b/TheWineHouse/css/style.css
@@ -166,7 +166,7 @@ section {
 
 .section-1-wrapper {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
-    url(images/section-1-bg.jpg) center no-repeat;
+    url(TheWineHouse/images/section-1-bg.jpg) center no-repeat;
   background-size: cover;
 }
 
